third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/parser/address_almost_too_long_decimal_exp.exp
script {
    entry fun <SELF>_0() {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ address_almost_too_long_decimal_exp.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
